--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "typings install",
     "install-types": "typings install",
-    "test": "mocha --opts mocha.opts",
-    "start": "webpack-dev-server --hot --config webpack.config.js --port 3333",
-    "plugin:build": "rm -rf plugin/dist; mkdir plugin/dist; tsc plugin/postcss-simple-grid.ts --outDir plugin/dist; tslint plugin/postcss-simple-grid.ts",
-    "plugin:test": "mocha --opts mocha.opts --watch"
+    "test": "mocha --opts mocha.opts --watch",
+    "start": "rm -rf example/dist && node server",
+    "build": "rm -rf plugin/dist; tsc --outDir plugin/dist; tslint plugin/src/*.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chokidar": "^1.6.0",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^3.0.2",
     "postcss-cssnext": "^2.8.0",
     "postcss-for": "^2.1.1",
     "postcss-loader": "^0.11.1",
+    "require-reload": "^0.2.2",
     "style-loader": "^0.13.1",
     "ts-node": "^1.3.0",
     "tslint": "^3.15.1",
